# betting-autopsy

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: 01_exploration.py  02_calibration.py  03_arbitrage.py  04_kelly.py
src/: __init__.py
src/analysis/: __init__.py  arbitrage.py  calibration.py  comparison.py  kelly.py  microstructure.py
src/api/: __init__.py  main.py  routes.py
src/api/templates/: index.html
src/ingest/: __init__.py  manifold.py  metaculus.py  polymarket.py  scheduler.py
src/models/: __init__.py  database.py  schemas.py
src/viz/: __init__.py  arbitrage.py  calibration.py  portfolio.py
tests/: __init__.py  test_arbitrage.py  test_calibration.py  test_kelly.py
