[project]
name = "betting-autopsy"
version = "0.1.0"
description = "Rigorous analysis of prediction market efficiency"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0.0",
    "duckdb>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "plotly>=5.18.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "marimo>=0.3.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "gql>=3.5.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
